--- a/csv-editor/ClientApp/src/app/components/csv-table/csv-table.component.html
+++ b/csv-editor/ClientApp/src/app/components/csv-table/csv-table.component.html
@@ -2,6 +2,7 @@
 <p>Here you can see a list of all the current working persons at Oolo!</p>
 <p>If you'd like to have some fun, we're offering you an option to edit the workers names :)</p>
 <p>In order to do that, please click on the 'edit' button above the table.</p>
+<p>To save the changes, please chlick on the 'save' button.</p>
 
 <button mat-flat-button color="primary" [disabled]="isEditMode" (click)="toggleEditMode()">Edit</button>
 <button mat-flat-button color="accent" [disabled]="!isEditMode" (click)="saveChanges()">Save</button>
